Design of API
