# api/swagger/swagger.yaml
@@ -18,15 +18,17 @@ consumes:
 produces:
   - application/json
 paths:
-  /schedule:
+  /schedule/event/{sellerId}:
     # binds a127 app logic to a route
     x-swagger-router-controller: schedule
     get:
+      tags:
+        - "schedule"
       description: Returns 'Schedule' of Seller
-      operationId: schedule
+      operationId: getSchedule
       parameters:
         - name: sellerId
-          in: query
+          in: path
           description: The schedule of the seller
           required: true
           type: string
@@ -41,10 +43,108 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+    post:
+      tags:
+        - "schedule"
+      summary: "Returns 'Schedule' of Seller"
+      operationId: "addSchedule"
+      parameters:
+        - name: "sellerId"
+          in: "path"
+          description: "The schedule of the seller"
+          required: true
+          type: string
+        - name: "body"
+          in: "body"
+          required: false
+          schema:
+            $ref: "#/definitions/Schedule"
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            $ref: "#/definitions/ScheduleResponse"
+        default:
+          description: "Error"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      tags:
+        - "schedule"
+      summary: "Returns 'Schedule' of Seller"
+      operationId: "updateSchedule"
+      parameters:
+        - name: "sellerId"
+          in: "path"
+          description: "The schedule of the seller"
+          required: true
+          type: string
+        - name: "body"
+          in: "body"
+          required: false
+          schema:
+            $ref: "#/definitions/Schedule"
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            $ref: "#/definitions/ScheduleResponse"
+        default:
+          description: "Error"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /schedule/event/{sellerId}/{eventId}:
+    x-swagger-router-controller: schedule
+    delete:
+      tags:
+        - "schedule"
+      summary: "Returns 'Schedule' of Seller"
+      operationId: "disableSchedule"
+      parameters:
+        - name: "sellerId"
+          in: "path"
+          description: "The schedule of the seller"
+          required: true
+          type: string
+        - name: "eventId"
+          in: "path"
+          description: "The schedule of the seller"
+          required: true
+          type: string
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            $ref: "#/definitions/ScheduleResponse"
+        default:
+          description: "Error"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
+  Schedule:
+    type: "object"
+    properties:
+      id:
+        type: "string"
+      startTime:
+        type: "string"
+        default: "2017-12-31T00:00:01.01Z"
+      endTime:
+        type: "string"
+        default: "2017-12-31T23:59:59.59Z"
+      event:
+        type: "string"
+        default: lack_of_delivery_staff
+        enum:
+          - lack_of_delivery_staff
+          - connection issues
+          - overloaded
+          - holidays
+    xml:
+      name: "Schedule"
   ScheduleResponse:
     required:
       - message
